--- a/Market.API/Market.API.csproj
+++ b/Market.API/Market.API.csproj
@@ -5,7 +5,17 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3"/>
+        <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Domain" />
+      <Folder Include="Extensions" />
+      <Folder Include="Infrastructure" />
+      <Folder Include="Mapping" />
+      <Folder Include="Persistence" />
+      <Folder Include="Resources" />
+      <Folder Include="Services" />
     </ItemGroup>
 
 </Project>
