--- a/Market.API/Market.API.csproj
+++ b/Market.API/Market.API.csproj
@@ -5,11 +5,11 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="Microsoft.OpenApi" Version="1.2.3" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
     </ItemGroup>
 
     <ItemGroup>
-      <Folder Include="Extensions" />
       <Folder Include="Infrastructure" />
       <Folder Include="Mapping" />
       <Folder Include="Persistence" />
