--- a/Market.API/Market.API.csproj
+++ b/Market.API/Market.API.csproj
@@ -5,15 +5,13 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="AutoMapper" Version="10.1.1" />
         <PackageReference Include="Microsoft.OpenApi" Version="1.2.3" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
     </ItemGroup>
 
     <ItemGroup>
-      <Folder Include="Infrastructure" />
-      <Folder Include="Mapping" />
       <Folder Include="Persistence" />
-      <Folder Include="Resources" />
       <Folder Include="Services" />
     </ItemGroup>
 
