--- a/Market.API/appsettings.json
+++ b/Market.API/appsettings.json
@@ -1,10 +1,12 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+      "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "memory": "data-in-memory",
+    "default": "data source=default.sqlite3"
+  }
 }
